# lava

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  vtriangle.c  vtriangle.cpp
demos/: 00_destroy.cpp  01_clear_screen.cpp  02_triangle_shared.cpp  03_triangle_staged.cpp  04_triangle_recorded.cpp  05_spinny_double.cpp  06_spinny_staged.cpp  07_hello_texture.cpp  08_klein_bottle.cpp  09_particle_system.cpp  0a_particle_system.cpp  0b_shadertoy.cpp  0c_framebuffer.cpp  CMakeLists.txt  README.md  hellolava.cpp  noscene.cpp  shader_test.cpp  shadertest.cpp  spinny.cpp  spinny_double.cpp  spinny_staged.cpp  triangle_recorded.cpp  triangle_shared.cpp  triangle_staged.cpp  vertexid.cpp  vtriangle.cpp
docs/: apidoc.css  index.html  lava.html  lavadoc.md.html
extras/: notes.txt  style.md  todo.md
extras/android/: .gitignore  README.md
extras/android/app/: CMakeLists.txt  build.gradle
extras/android/app/src/main/: AndroidManifest.xml
extras/android/app/src/main/assets/shaders/: bug00_frag.spv  bug00_vert.spv
extras/android/app/src/main/cpp/: AmberApp.h  AmberAppAndroid.cpp  AndroidMain.cpp  ClearScreenApp.cpp  CreateShaderModule.cpp  CreateShaderModule.h  TriangleRecordedApp.cpp  VulkanMain.cpp  VulkanMain.hpp  native-lib.cpp
extras/android/app/src/main/java/net/prideout/lava/lavademo/: MainActivity.java
extras/android/app/src/main/res/values/: strings.xml
extras/android/gradle/wrapper/: gradle-wrapper.properties
extras/macos/: CMakeLists.txt  README.md  aliases.sh
extras/macos/src/: AppDelegate.h  AppDelegate.mm  GameViewController.h  GameViewController.mm  MainMenu.xib  Shaders.metal  SharedStructures.h  main.mm  test.cpp
extras/vscode/: c_cpp_properties.json  settings.json
include/par/: AmberApplication.h  AmberCompiler.h  AmberProgram.h  LavaCompiler.h  LavaContext.h  LavaCpuBuffer.h  LavaDescCache.h  LavaGpuBuffer.h  LavaLoader.h  LavaLog.h  LavaPipeCache.h  LavaProgram.h  LavaSurfCache.h  LavaTexture.h
include/vulkan/: vulkan_macos.h
src/: AmberCompiler.cpp  AmberMain.cpp  AmberProgram.cpp  LavaCompiler.cpp  LavaContext.cpp  LavaCpuBuffer.cpp  LavaDescCache.cpp  LavaGpuBuffer.cpp  LavaInternal.cpp  LavaInternal.h  LavaLoader.cpp  LavaLog.cpp  LavaPipeCache.cpp  LavaProgram.cpp  LavaSurfCache.cpp  LavaTexture.cpp  vk_mem_alloc.h
